<?xml version="1.0" encoding="UTF-8"?>
<!--
    Maven POM for ProjectLibre Core Tests
    Purpose: Run ISOLATED JUnit 5 tests that don't require legacy code
    
    IMPORTANT: These tests are designed to be independent of the main codebase.
    They test algorithms and logic directly without requiring ProjectLibre initialization.
    
    Usage:
    - mvn test                   - Run all tests
    - mvn test -Dtest=TestClass  - Run specific test
-->
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 
                             http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.projectlibre</groupId>
    <artifactId>projectlibre-core-tests</artifactId>
    <version>1.0.0</version>
    <packaging>jar</packaging>

    <name>ProjectLibre Core Tests</name>
    <description>Isolated unit tests for ProjectLibre core algorithms</description>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <junit.version>5.10.2</junit.version>
        <!-- Skip main source compilation - tests are isolated -->
        <maven.main.skip>true</maven.main.skip>
    </properties>

    <dependencies>
        <!-- JUnit 5 for testing -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-params</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <!-- No main sources to compile - tests are isolated -->
        <sourceDirectory>src/test/java</sourceDirectory>
        <testSourceDirectory>src/test/java</testSourceDirectory>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.12.1</version>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                    <!-- Only compile test sources -->
                    <skipMain>true</skipMain>
                </configuration>
            </plugin>
            
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.2.5</version>
                <configuration>
                    <includes>
                        <include>**/*Test.java</include>
                    </includes>
                    <!-- Run in headless mode -->
                    <argLine>-Djava.awt.headless=true</argLine>
                    <systemPropertyVariables>
                        <java.awt.headless>true</java.awt.headless>
                    </systemPropertyVariables>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
